--- a/GE.WebUI/Views/Articles/DisplayTemplates/VMMaterial.cshtml
+++ b/GE.WebUI/Views/Articles/DisplayTemplates/VMMaterial.cshtml
@@ -22,7 +22,7 @@
     {
         var video = Model.Videos.First();
         <div class="list-video">
-            @Html.SxVideo(video, SX.WebCore.SxProviders.SxVideoProvider.VideoQuality.Medium)
+            @Html.SxVideo(video, SX.WebCore.SxProviders.SxVideoProvider.VideoQuality.Standart)
         </div>
     }
 
