--- a/GE.WebUI/less/material.less
+++ b/GE.WebUI/less/material.less
@@ -24,7 +24,7 @@
     display: inline-block;
     width: 100%;
     font-size: 15px;
-    line-height: 2;
+    line-height: 1.5;
     text-align:justify;
     margin-bottom:@def-pad*2;
     @media (max-width: @screen-xs-max) {
@@ -146,6 +146,10 @@
     border: 1px solid rgba(255,255,255,.1);
     border-left-color: @color-red;
     border-left-width:3px;
+}
+
+.mat-fwd__info{
+    line-height:1.2;
 }
 
 .mat-fwd > .ann {
