--- a/GE.WebUI/Areas/Admin/Views/Cookies/Index.cshtml
+++ b/GE.WebUI/Areas/Admin/Views/Cookies/Index.cshtml
@@ -6,7 +6,7 @@
 <h2>@ViewBag.Title</h2>
 <br />
 
-<div class="grid-cookies">
+<div id="grid-cookies">
     @Html.Partial("_GridView", Model)
 </div>
 
