--- a/GE.WebUI/Views/Shared/_Foreword.cshtml
+++ b/GE.WebUI/Views/Shared/_Foreword.cshtml
@@ -3,16 +3,13 @@
 <blockquote class="mat-fwd">
     <h2 class="ann">Аннотация</h2>
     <p class="fwd">@Model.Foreword</p>
-    <p>
-        Дата публикации: <strong>@Model.DateOfPublication.ToString("dd.MM.yyyy")</strong>
-        <br />
-        Отредактировано: <strong>@Model.DateUpdate.ToString("dd.MM.yyyy hh:mm")</strong>
-        <br />
+    <p class="mat-fwd__info">
+        Дата публикации: <strong>@Model.DateOfPublication.ToString("dd.MM.yyyy")</strong><br />
+        Отредактировано: <strong>@Model.DateUpdate.ToString("dd.MM.yyyy hh:mm")</strong><br />
         @if (Model.User != null)
         {
-            <div>Автор материала: <strong>@Model.User.NikName</strong></div>
+            <text>Автор материала:</text> <strong>@Model.User.NikName</strong>
         }
     </p>
-    <p>Рейтинг:</p>
     @Html.SxRating(Model.Rating, Url.Action("AddRating", "Rating", new { mid = Model.Id, mct = Model.ModelCoreType }))
 </blockquote>
